feat: encryption & decryption with KMS (#294)
# Add KMS encryption support

## Summary

This PR implements KMS-based encryption & decryption support for the
`@storacha/encrypt-upload-client` package while maintaining full
backward compatibility with existing Lit Protocol functionality.

## Major Features Added

**KMS Crypto Adapter**: Full implementation of the `CryptoAdapter`
interface using Google KMS via the freeway private gateway. Supports
RSA-OAEP encryption of symmetric keys with proper UCAN delegation-based
access control.

**Modular Metadata System**: Created version-based metadata with
`lit-metadata.js` for Lit Protocol (`encrypted/metadata@0.1`) and
`kms-metadata.js` for KMS (`encrypted/metadata@0.2`). Universal
orchestrator automatically routes between formats.

**Freeway Gateway Integration**: Proper integration with space
encryption setup and key decryption capabilities using
`@storacha/capabilities`. Handles RSA public key retrieval and encrypted
key decryption through the private gateway.

**Uploader.tsx**: Updated the Uploader react component to support
encrypted uploads based on the Space access type (private).

## Implementation Details

**Key Management**: KMS adapter encrypts symmetric keys using RSA-OAEP
with public keys retrieved from Google KMS. Key references are
base64-encoded to hide infrastructure details. Decryption happens
server-side via the freeway gateway.

## Backward Compatibility

**Existing Files**: All previously encrypted Lit Protocol files continue
working. The `encrypted/metadata@0.1` format remains fully supported. A
0.3 version will be created in a next iteration to unify the schemas,
see https://github.com/storacha/project-tracking/issues/530 for more
info.

## Architecture Benefits

**Clean Separation**: Each encryption strategy is completely
encapsulated in its own module with no cross-dependencies between Lit
and KMS implementations.

**Future Extensibility**: Easy to add additional encryption providers by
registering n

--- a/packages/encrypt-upload-client/package.json
+++ b/packages/encrypt-upload-client/package.json
@@ -37,21 +37,21 @@
       "import": "./dist/index.js",
       "require": "./dist/index.js"
     },
+    "./factories.node": {
+      "import": "./dist/crypto/factories.node.js",
+      "require": "./dist/crypto/factories.node.js"
+    },
+    "./factories.browser": {
+      "import": "./dist/crypto/factories.browser.js",
+      "require": "./dist/crypto/factories.browser.js"
+    },
     "./node": {
-      "import": "./dist/crypto-adapters/node-crypto-adapter.js",
-      "require": "./dist/crypto-adapters/node-crypto-adapter.js"
+      "import": "./dist/crypto/symmetric/node-aes-cbc-crypto.js",
+      "require": "./dist/crypto/symmetric/node-aes-cbc-crypto.js"
     },
     "./browser": {
-      "import": "./dist/crypto-adapters/browser-crypto-adapter.js",
-      "require": "./dist/crypto-adapters/browser-crypto-adapter.js"
-    },
-    "./crypto-adapters/browser-crypto-adapter": {
-      "import": "./dist/crypto-adapters/browser-crypto-adapter.js",
-      "types": "./dist/crypto-adapters/browser-crypto-adapter.d.ts"
-    },
-    "./crypto-adapters/node-crypto-adapter": {
-      "import": "./dist/crypto-adapters/node-crypto-adapter.js",
-      "types": "./dist/crypto-adapters/node-crypto-adapter.d.ts"
+      "import": "./dist/crypto/symmetric/generic-aes-ctr-streaming-crypto.js",
+      "require": "./dist/crypto/symmetric/generic-aes-ctr-streaming-crypto.js"
     },
     "./types": "./dist/types.js"
   },
@@ -62,8 +62,11 @@
     "lint:fix": "tsc --build && eslint '**/*.{js,ts}' --fix && prettier --write '**/*.{js,ts,yml,json}' --ignore-path ../../.gitignore",
     "build-actions": "node lit-actions/esbuild.js",
     "attw": "attw --pack .",
+    "prepare-environment": "playwright install",
     "rc": "npm version prerelease --preid rc",
-    "test": "node --test test/*.spec.js"
+    "test": "node --test $(find test -name '*.spec.js' ! -name '*.playwright.spec.js')",
+    "test:setup-certs": "mkdir -p test/mocks/playwright && cd test/mocks/playwright && (test -f cert.key || (npx mkcert create-ca && npx mkcert create-cert --domains localhost 127.0.0.1 ::1))",
+    "test:browser": "npm run test:setup-certs && npx playwright test"
   },
   "dependencies": {
     "@ipld/car": "catalog:",
@@ -96,8 +99,10 @@
   },
   "devDependencies": {
     "@lit-protocol/types": "^7.0.8",
+    "@playwright/test": "catalog:",
     "@storacha/eslint-config": "workspace:^",
     "esbuild": "^0.25.1",
+    "mkcert": "^3.2.0",
     "typescript": "catalog:"
   },
   "eslintConfig": {
@@ -120,7 +125,11 @@
       "coverage",
       "lit-actions",
       "src/types.js",
-      "*.min.js"
+      "*.min.js",
+      "**/*.playwright.spec.js",
+      "test/mocks/playwright/**",
+      "playwright.config.js",
+      "playwright-report/**/*"
     ]
   },
   "depcheck": {
